# crabtype

./: .gitignore  Cargo.toml  README.md  default.nix  prompts.txt  shell.nix  test.toml
src/: end.rs  game.rs  main.rs  round.rs  terminal.rs
